--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,59 @@ body{
     background: rgba(0,0,0,0.4);
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
-.header__container{}
+.header__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
 
-.logo{}
-.logo img{}
-.logo span{}
+.logo{
+    font-size: 35px;
+    font-family: 'Nunito Sans', sans-serif;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: flex;
+}
+.logo img{
+    margin-right: 10px;
 
-.menu{}
-.menu__list{}
+}
+.logo span{
+    color: var(--color);
+    margin-right: 5px;
+}
+
+.menu{
+    height: 100%;
+}
+.menu__list{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 .menu__el{}
-.menu__link{}
+.menu__link{
+    font-family: 'Nunito Sans', sans-serif;
+    color: white;
+    text-transform: uppercase;
+    font-size: 16px;
+    text-decoration: none;
+    padding: 0 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-weight: bold;
+    transition: 0.4s;
+}
+.menu__link:hover{
+    background: rgba(225,225,225,0.2);
+}
 
 /*/hero/*/
 .hero{
