--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+html, body{
+scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Nunito Sans', sans-serif;
     font-family: 'Open Sans', sans-serif;
@@ -89,8 +93,94 @@ body{
 /*/hero/*/
 .hero{
     background-image: url(../images/image.jpg);
-    background-position: center;
     background-size: cover;
+    background-position: center;
     height: 100vh;
+    min-height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.hero::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
+
+}
+
+.hero__title{
+    font-size: 90px;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 900;
+    position: relative;
+    z-index: 1;
+    text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
+    margin: 20px 0;
+}
+.hero__text{
+    position: relative;
+    z-index: 1;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+    max-width: 1080px;
+    text-align: center;
+    line-height: 1.5em;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.hero__buttons{
+    position: relative;
+    z-index: 1;
+}
+.hero__btn{
+    width: 220px;
+    height: 66px;
+    border-radius: 50px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 10px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+}
+.hero_btn--share{
+    background: var(--color);
+    color: white;
+}
+.hero_btn--key{
+    background: white;
+    color: var(--color);
+}
+
+.hero__arrow{
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background: var(--color);
+    background-image: url(../images/icon-arrow-down.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
+    text-indent: -999px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
+#blog{
+    height: 600px;
 
 }
