--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,132 @@ body{
 .container{
     max-width: 1088px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
+
+.section{
+    padding-top: 60px;
+    padding-bottom: 100px;
+}
+
+.row{
+    display: flex;
+    gap: 16px;
+}
+.row .col{
+    flex: 1;
+}
+
+
+.section-title{
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.section-title--light {
+    color: white;
+}
+.section-title::before{
+    content: "";
+    width: 50px;
+    height: 3px;
+    background: var(--color);
+    border-radius: 8px;
+    margin: 0 10px;
+}
+.section-title::after{
+    content: "";
+    width: 50px;
+    height: 3px;
+    background: var(--color);
+    border-radius: 8px;
+    margin: 0 10px;
+}
+
+
+
+.art{}
+.art__image{
+    max-width: 100%;
+    height: auto;
+}
+.art__title{
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 19px;
+    color: rgb(106,106,106);
+    text-transform: uppercase;
+    font-weight: normal;
+}
+.art__text{
+    font-size: 14px;
+    color: rgb(106,106,106);
+    line-height: 1.5em;
+    margin-bottom: 20px;
+}
+.art__btn{
+    font-size: 14px;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: 'Nunito Sans', sans-serif;
+    display: inline-flex;
+    background: var(--color);
+    padding: 15px 25px;
+    border-radius: 30px;
+    font-weight: bold;
+    text-decoration: none;
+}
+/*service*/
+.section-service{
+    background: #28272C;
+}
+.section-service-container{
+
+}
+.section-title{}
+.service-art{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.service-image{
+    width: 170px;
+    height: 170px;
+}
+.service-title{
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 19px;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: white;
+}
+.service-text{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #ddd;
+    line-height: 1.5em;
+    margin-bottom: 20px;
+}
+.service-btn{
+    font-size: 14px;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: 'Nunito Sans', sans-serif;
+    display: inline-flex;
+    background: var(--color);
+    padding: 15px 25px;
+    border-radius: 30px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+
 
 
 /*/header/*/
@@ -180,7 +305,3 @@ body{
     transform: translate(-50%, 50%);
 }
 
-#blog{
-    height: 600px;
-
-}
